--- a/working dir/skins/Main/Main.css
+++ b/working dir/skins/Main/Main.css
@@ -740,6 +740,67 @@
     /*-fx-background-insets: 2 0 -2 0, 0;*/
 }
 
+/* Force all scrollbar to be of equal size */
+.scroll-bar:vertical {
+    -fx-pref-width: 1.66666666667em; /* 20 */
+}
+.scroll-bar:horizontal {
+    -fx-pref-height: 1.66666666667em; /* 20 */
+}
+
+.scroll-bar,
+.scroll-bar:vertical,
+.scroll-bar:horizontal,
+.virtual-flow > .scroll-bar,
+.virtual-flow > .scroll-bar:vertical,
+.virtual-flow > .scroll-bar:horizontal,
+.text-area > .scroll-pane > .scroll-bar,
+.text-area > .scroll-pane > .scroll-bar:vertical,
+.text-area > .scroll-pane > .scroll-bar:horizontal,
+.list-view > .virtual-flow > .scroll-bar,
+.list-view > .virtual-flow > .scroll-bar:vertical,
+.list-view > .virtual-flow > .scroll-bar:horizontal,
+.tree-view > .virtual-flow > .scroll-bar,
+.tree-view > .virtual-flow > .scroll-bar:vertical,
+.tree-view > .virtual-flow > .scroll-bar:horizontal,
+.table-view > .virtual-flow > .scroll-bar,
+.table-view > .virtual-flow > .scroll-bar:vertical,
+.table-view > .virtual-flow > .scroll-bar:horizontal,
+.tree-table-view > .virtual-flow > .scroll-bar,
+.tree-table-view > .virtual-flow > .scroll-bar:vertical,
+.tree-table-view > .virtual-flow > .scroll-bar:horizontal {
+    -fx-padding: 0;
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+}
+
+.scroll-bar > .thumb,
+.scroll-bar:vertical > .thumb,
+.scroll-bar:horizontal > .thumb,
+.virtual-flow > .scroll-bar > .thumb,
+.virtual-flow > .scroll-bar:vertical > .thumb,
+.virtual-flow > .scroll-bar:horizontal > .thumb,
+.text-area > .scroll-pane > .scroll-bar > .thumb,
+.text-area > .scroll-pane > .scroll-bar:vertical > .thumb,
+.text-area > .scroll-pane > .scroll-bar:horizontal > .thumb,
+.list-view > .virtual-flow > .scroll-bar > .thumb,
+.list-view > .virtual-flow > .scroll-bar:vertical > .thumb,
+.list-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
+.tree-view > .virtual-flow > .scroll-bar > .thumb,
+.tree-view > .virtual-flow > .scroll-bar:vertical > .thumb,
+.tree-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
+.table-view > .virtual-flow > .scroll-bar > .thumb,
+.table-view > .virtual-flow > .scroll-bar:vertical > .thumb,
+.table-view > .virtual-flow > .scroll-bar:horizontal > .thumb,
+.tree-table-view > .virtual-flow > .scroll-bar > .thumb,
+.tree-table-view > .virtual-flow > .scroll-bar:vertical > .thumb,
+.tree-table-view > .virtual-flow > .scroll-bar:horizontal > .thumb {
+    -fx-padding: 0;
+    -fx-background-color: -fx-def-font-color;
+    -fx-background-insets: 0.46em;
+    -fx-background-radius: 1em; /* 3px */
+}
+
 /*******************************************************************************
  *                                                                             *
  * ScrollPane                                                                  *
